# AutoMarket-Insights-Scraper

./: .gitignore  README.md  cars_kg.py  config.py  index.html  main.py  mashina_kg.py  mashina_kg_asyncio.py  modeling_mean.ipynb  notebook.ipynb  pyproject.toml  requirements.txt
csv_data/mashina_kg/: 11_02_2023_06_31.csv  11_02_2023_06_34.csv  11_02_2023_06_38.csv  11_02_2023_06_41.csv  11_02_2023_06_44.csv  11_02_2023_06_47.csv  11_02_2023_06_50.csv  11_02_2023_06_54.csv  11_02_2023_06_57.csv  11_02_2023_07_00.csv  11_02_2023_07_03.csv  11_02_2023_07_07.csv  11_02_2023_07_10.csv  11_02_2023_07_13.csv  11_02_2023_07_16.csv  11_02_2023_07_20.csv  11_02_2023_07_23.csv  11_02_2023_07_26.csv  11_02_2023_07_29.csv  11_02_2023_07_33.csv  11_02_2023_07_36.csv  11_02_2023_07_39.csv  11_02_2023_07_42.csv  11_02_2023_07_46.csv  11_02_2023_07_49.csv  11_02_2023_07_52.csv  11_02_2023_07_55.csv  11_02_2023_07_59.csv  11_02_2023_08_02.csv  11_02_2023_08_05.csv  11_02_2023_08_08.csv  11_02_2023_08_12.csv  11_02_2023_08_15.csv  11_02_2023_08_18.csv  11_02_2023_08_21.csv  11_02_2023_08_25.csv  11_02_2023_08_28.csv  11_02_2023_08_31.csv  11_02_2023_08_34.csv  11_02_2023_08_38.csv  (+123 more)
csv_data/sorted_dfs/: df_notif_sent.csv  df_sorted_upd.csv  mean_prices.csv
json_data/mashina_kg/: 01_02_2023_00_02.json  01_02_2023_00_05.json  01_02_2023_00_09.json  01_02_2023_00_12.json  01_02_2023_00_15.json  01_02_2023_00_18.json  01_02_2023_00_21.json  01_02_2023_00_25.json  01_02_2023_00_28.json  01_02_2023_00_31.json  01_02_2023_00_34.json  01_02_2023_00_37.json  (+1306 more)
src/: database.py
(+6 files in other folders)
